Small CSS tweaks for card positions

--- a/client/shared/netrunner.html
+++ b/client/shared/netrunner.html
@@ -25,7 +25,7 @@
 
 <template name="sidebar">
   <div id="sidebar">
-    <div style="width: 204px; height: 288px">
+    <div id="magnifier-container">
       <img id="magnifier">
     </div>
     <div id="choices">
