Add stub player/game stats html

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -20,6 +20,17 @@
     <div id="magnifier-container">
       <img id="magnifier">
     </div>
+    <div class="sidebarStats" id="gameStats">
+      <p><strong>Turn: </strong> 1</p>
+    </div>
+    <div class="sidebarStats" id="corpStats">
+      <p><strong><u>Runner Stats</u></strong></p>
+      <p><strong>Score: </strong>0 <strong>Credits: </strong>5</p>
+    </div>
+    <div class="sidebarStats" id="runnerStats">
+      <p><strong><u>Corp Stats</u></strong></p>
+      <p><strong>Score: </strong>0 <strong>Credits: </strong>5</p>
+    </div>
     {{> actionChoices}}
   </div>
 </template>
