Make corp stats dynamic

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -40,9 +40,9 @@
   <div class="sidebarStats" id="corpStats">
     <p><strong><u>Corp Stats</u></strong></p>
     <p>
-      <strong>Score: </strong>0
-      <strong> Credits: </strong>5
-      <strong> Clicks: </strong>0
+      <strong>Score: </strong>{{corpScore}}
+      <strong> Credits: </strong>{{corpCredits}}
+      <strong> Clicks: </strong>{{corpClicks}}
     </p>
   </div>
 </template>
