--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -59,6 +59,7 @@
     {{else}}
     <p><strong>Default {{playerSide}} Choices</strong></p>
     <button id="draw_card">Draw a card</button>
+    <button id="gainCredit">Gain 1 credit</button>
     {{/if}}
   </div>
 </template>
