Rename drawCard action

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -58,7 +58,7 @@
     {{/each}}
     {{else}}
     <p><strong>Default {{playerSide}} Choices</strong></p>
-    <button id="draw_card">Draw a card</button>
+    <button id="drawCard">Draw a card</button>
     <button id="gainCredit">Gain 1 credit</button>
     {{/if}}
   </div>
