Implement basics of endTurn functionality

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -10,7 +10,7 @@
 
 <template name="main_canvas">
   <div id="main_canvas_div">
-    <canvas id="main_canvas" width="1100" height="700"></canvas>
+    <canvas id="main_canvas" width="1080" height="700"></canvas>
   </div>
 </template>
 
@@ -60,6 +60,7 @@
     <p><strong>Default {{playerSide}} Choices</strong></p>
     <button id="drawCard">Draw a card</button>
     <button id="gainCredit">Gain 1 credit</button>
+    <button id="endTurn">End Your Turn</button>
     {{/if}}
   </div>
 </template>
