--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -10,7 +10,7 @@
 
 <template name="main_canvas">
   <div id="main_canvas_div">
-    <canvas id="main_canvas" width="1080" height="700"></canvas>
+    <canvas id="main_canvas" width="{{canvasWidth}}" height="{{canvasHeight}}"></canvas>
   </div>
 </template>
 
