Add bootstrap classes to buttons

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -65,14 +65,14 @@
     <p>{{ cardDescription }}</p>
     {{#each actions}}
     <div>
-      <button class="action-button" data-action="{{ getActionName this }}" data-target="{{ getTarget this }}">{{ getActionText this }}</button>
+      <button class="action-button" data-action="{{ getActionName this }}" data-target="{{ getTarget this }}" class="btn">{{ getActionText this }}</button>
     </div>
     {{/each}}
     {{else}}
     <p><strong>Default {{playerSide}} Choices</strong></p>
-    <button id="drawCard">Draw a card</button>
-    <button id="gainCredit">Gain 1 credit</button>
-    <button id="endTurn">End Your Turn</button>
+    <button id="drawCard" class="btn">Draw a card</button>
+    <button id="gainCredit" class="btn">Gain 1 credit</button>
+    <button id="endTurn" class="btn">End Your Turn</button>
     {{/if}}
   </div>
 </template>
@@ -84,7 +84,7 @@
       {{#each cardChoices}}
       <div class='card-choice'>
         <img class='card-choice-img' src='{{ src }}'>
-        <button class='action-button' data-id='{{ _id }}' data-cardType='{{ cardType }}'>Install {{ name }}</button>
+        <button class='action-button' data-id='{{ _id }}' data-cardType='{{ cardType }}' class="btn">Install {{ name }}</button>
       </div>
       {{/each}}
     </div>
