Move player stats to a different position

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -31,8 +31,10 @@
     <div id="magnifier-container">
       <img id="magnifier">
     </div>
-    {{> sidebarStats}}
     {{> actionChoices}}
+  </div>
+  <div id="playerStats">
+    {{> sidebarStats}}
   </div>
 </template>
 
