refactor selectedCard to selectedObj

--- a/client/shared/board.html
+++ b/client/shared/board.html
@@ -62,7 +62,7 @@
 
 <template name="actionChoices">
   <div class="actionContainer">
-    {{#if onlyOneCard}}
+    {{#if onlyOneObject}}
     <p><strong>{{ cardName }}</strong></p>
     <p>{{ cardDescription }}</p>
     {{#each actions}}
